Update pixmap pitch in radeon_set_pixmap_bo

Stop second guessing it in drmmode_crtc_scanout_create.

Fixes display corruption in some cases with TearFree enabled.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=94751

Reviewed-by: Alex Deucher <alexander.deucher@amd.com>